Fikser dato ved innsending av personstatus